...
        view.text = "내가 찜한 컨텐츠"
        return view
    }()
    
    let myPickButton: UIButton = {
        let view = UIButton()
        view.setImage(UIImage(named: "check"), for: .normal)
        return view
    }()
    
    let playButton: UIButton = {
       let view = UIButton()
        view.setImage(UIImage(named: "play_normal"), for: .normal)
...
